# ocaml-protoc-plugin

./: .gitignore  Changelog.md  Makefile  README.md  conf-protoc-dev.opam  conf-protoc.opam  dune  dune-project  dune-workspace  index.html  ocaml-protoc-plugin.opam  parse_results.sh
.github/workflows/: workflow.yml
bench/: bench.ml  dune  map.proto  verify.proto  verify_evaluation.ml
bench/plugin/: dune
bench/protoc/: dune
examples/echo/: dune  test.ml
examples/echo_deriving/: dune  echo.proto  test.ml
examples/echo_deriving/google_types_deriving/: dune
examples/echo_reflection/: dune  echo.proto  test.ml
examples/extensions/: dune
files/: Makefile  test.c
ocaml-protoc-plugin/: index.html
ocaml-protoc-plugin/Google_types/: index.html
ocaml-protoc-plugin/Google_types/Any/: index.html
ocaml-protoc-plugin/Google_types/Any/Google/: index.html
ocaml-protoc-plugin/Google_types/Any/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Any/Google/Protobuf/Any/: index.html
ocaml-protoc-plugin/Google_types/Api/: index.html
ocaml-protoc-plugin/Google_types/Api/Google/: index.html
ocaml-protoc-plugin/Google_types/Api/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Api/Google/Protobuf/Api/: index.html
ocaml-protoc-plugin/Google_types/Api/Google/Protobuf/Method/: index.html
ocaml-protoc-plugin/Google_types/Api/Google/Protobuf/Mixin/: index.html
ocaml-protoc-plugin/Google_types/Descriptor/: index.html
ocaml-protoc-plugin/Google_types/Descriptor/Google/: index.html
ocaml-protoc-plugin/Google_types/Descriptor/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Descriptor/Google/Protobuf/DescriptorProto/: index.html
ocaml-protoc-plugin/Google_types/Descriptor/Google/Protobuf/EnumDescriptorProto/: index.html
ocaml-protoc-plugin/Google_types/Duration/: index.html
ocaml-protoc-plugin/Google_types/Duration/Google/: index.html
ocaml-protoc-plugin/Google_types/Duration/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Duration/Google/Protobuf/Duration/: index.html
ocaml-protoc-plugin/Google_types/Empty/: index.html
ocaml-protoc-plugin/Google_types/Empty/Google/: index.html
ocaml-protoc-plugin/Google_types/Empty/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Field_mask/: index.html
ocaml-protoc-plugin/Google_types/Field_mask/Google/: index.html
ocaml-protoc-plugin/Google_types/Field_mask/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Source_context/: index.html
ocaml-protoc-plugin/Google_types/Source_context/Google/: index.html
ocaml-protoc-plugin/Google_types/Source_context/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Struct/: index.html
ocaml-protoc-plugin/Google_types/Struct/Google/: index.html
ocaml-protoc-plugin/Google_types/Struct/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Timestamp/: index.html
ocaml-protoc-plugin/Google_types/Timestamp/Google/: index.html
ocaml-protoc-plugin/Google_types/Timestamp/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Type/: index.html
ocaml-protoc-plugin/Google_types/Type/Google/: index.html
ocaml-protoc-plugin/Google_types/Type/Google/Protobuf/: index.html
ocaml-protoc-plugin/Google_types/Wrappers/: index.html
ocaml-protoc-plugin/Google_types/Wrappers/Google/: index.html
ocaml-protoc-plugin/Google_types/Wrappers/Google/Protobuf/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Extensions/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Json/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Json_options/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Reader/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Result/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Service/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Service/module-type-Message/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Service/module-type-Rpc/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Service/module-type-Rpc/Request/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Service/module-type-Rpc/Response/: index.html
ocaml-protoc-plugin/Ocaml_protoc_plugin/Writer/: index.html
src/google_types/: dune
src/ocaml_protoc_plugin/: deserialize.ml  deserialize.mli  deserialize_json.ml  deserialize_json.mli  dune  extensions.ml  extensions.mli  infix.ml  json.ml  json_options.ml  merge.ml  ocaml_protoc_plugin.ml  reader.ml  result.ml  runtime.ml  serialize.ml  serialize.mli  serialize_json.ml  serialize_json.mli  service.ml  spec.ml  writer.ml  writer.mli
src/plugin/: code.ml  comment_db.ml  comment_db.mli  dune  emit.ml  emit.mli  names.ml  option.ml  parameters.ml  protoc_gen_ocaml.ml  scope.ml  scope.mli  type_db.ml  type_map.ml  type_tree.ml  types.ml  types.mli  utils.ml
src/spec/: descriptor.ml  options.ml  plugin.ml
test/: basic_test_module_name.ml  comments.proto  deprecated.proto  deprecated_test.ml  dune  empty_message.proto  empty_message_test.ml  enum_test.ml  extensions.proto  extensions_test.ml  include_test.ml  int_types_native_test.ml  int_types_test.ml  json_encoding.proto  json_encoding_test.ml  large_test.ml  map.proto  map_test.ml  message_test.ml  oneof2_test.ml  oneof_test.ml  package_test.ml  packed_test.ml  primitive_types_test.ml  proto2_test.ml  proto3_optional_test_opt.ml  protobuf2json.cc  recursive.proto  recursive2.proto  recursive2_test.ml  recursive_test.ml  reflection.proto  reflection_parts.proto  reflection_test.ml  repeated_test.ml  service.proto  service_empty_package_test.ml  singleton_record_test.ml  test_lib.ml  test_runtime.ml
test/config/: discover.ml
test/google_types_pp/: dune
test/prefix_output_with_package/: dune
test/prefix_output_with_package/google_types_prefixed/: dune
test/singleton_record/: dune
test/singleton_record/google_types_singleton_record/: dune
test/test_include_a/: message.proto
test/test_include_b/: message.proto
test/test_params/: dune
test/test_params/google_types_prefixed/: dune
(+56 files in other folders)
