(executable
 (name        bench)
 (modules :standard \ verify verify_evaluation)
 (libraries   protoc plugin bechamel base stdio))

(rule
 (targets verify.ml)
 (deps
  (:plugin %{bin:protoc-gen-ocaml})
  (:proto verify.proto))
 (action
  (run protoc "--plugin=protoc-gen-ocaml=%{plugin}" "--ocaml_out=." %{proto})))

(executable
 (name verify_evaluation)
 (modules verify verify_evaluation)
 (libraries ocaml_protoc_plugin)
 (instrumentation (backend bisect_ppx))
)
