(executable
 (name        test)
 (libraries   ocaml-protoc-plugin ocaml-protoc-plugin.google_types unix)
)

(rule
 (targets google_include)
 (action (with-stdout-to %{targets}
          (system "pkg-config protobuf --variable=includedir"))))

(rule
 (targets echo.ml)
 (deps
  (:proto echo.proto)
   %{bin:protoc-gen-ocaml})
 (action
  (run protoc -I %{read-lines:google_include} -I . "--ocaml_out=open=Google_types:." %{proto})))
(rule
 (deps test.exe)
 (action (ignore-stdout (run %{deps})))
 (alias runtest)
)
