(executable
 (name test)
 (libraries ocaml-protoc-plugin ocaml-protoc-plugin.google_types unix))

(rule
 (targets google_include)
 (action
  (with-stdout-to
   %{targets}
   (system "pkg-config protobuf --variable=includedir"))))

(rule
 (targets echo.ml reflection_map.ml)
 (deps
  (:proto echo.proto)
  (package ocaml-protoc-plugin))
 (action
  (run
   protoc
   -I
   %{read-lines:google_include}
   -I
   .
   "--ocaml_out=open=Google_types;reflection_map:."
   %{proto})))

(rule
 (deps test.exe)
 (action
  (ignore-stdout
   (run %{deps})))
 (alias runtest))
