(library
 (name        google_types_pp)
 (libraries   ocaml_protoc_plugin)
 (preprocess
  (pps ppx_expect_option ppx_deriving.show ppx_deriving.eq))

 (synopsis "Google well known types with pretty printing")
)

(rule
 (targets any.ml api.ml descriptor.ml duration.ml empty.ml field_mask.ml
          source_context.ml struct.ml timestamp.ml type.ml wrappers.ml)
 (deps
  (:plugin ../../src/plugin/protoc_gen_ocaml.exe))
  (action
    (run protoc -I %{read-lines:../google_include} -I .
         "--plugin=protoc-gen-ocaml=%{plugin}"
         "--ocaml_out=annot=[@@deriving show { with_path = false }, eq]:."

    %{read-lines:../google_include}/google/protobuf/any.proto
    %{read-lines:../google_include}/google/protobuf/api.proto
    %{read-lines:../google_include}/google/protobuf/descriptor.proto
    %{read-lines:../google_include}/google/protobuf/duration.proto
    %{read-lines:../google_include}/google/protobuf/empty.proto
    %{read-lines:../google_include}/google/protobuf/field_mask.proto
    %{read-lines:../google_include}/google/protobuf/source_context.proto
    %{read-lines:../google_include}/google/protobuf/struct.proto
    %{read-lines:../google_include}/google/protobuf/timestamp.proto
    %{read-lines:../google_include}/google/protobuf/type.proto
    %{read-lines:../google_include}/google/protobuf/wrappers.proto
)))
