(library
 (name        google_types_prefixed)
 (libraries   ocaml_protoc_plugin)
 (preprocess
  (pps ppx_expect_nobase ppx_deriving.show ppx_deriving.eq))
 (synopsis "Google well known types with prefix_output_with_package=true")
)

(rule
 (targets
   google_protobuf_any.ml
   google_protobuf_api.ml
   google_protobuf_descriptor.ml
   google_protobuf_duration.ml
   google_protobuf_empty.ml
   google_protobuf_field_mask.ml
   google_protobuf_source_context.ml
   google_protobuf_struct.ml
   google_protobuf_timestamp.ml
   google_protobuf_type.ml
   google_protobuf_wrappers.ml)
  (deps
  (:plugin ../../../src/plugin/protoc_gen_ocaml.exe))
  (action
    (run protoc -I %{read-lines:../../google_include} -I .
         "--plugin=protoc-gen-ocaml=%{plugin}"
         "--ocaml_out=singleton_record=true;prefix_output_with_package=true;singleton_oneof_as_option=false:."

    %{read-lines:../../google_include}/google/protobuf/any.proto
    %{read-lines:../../google_include}/google/protobuf/api.proto
    %{read-lines:../../google_include}/google/protobuf/descriptor.proto
    %{read-lines:../../google_include}/google/protobuf/duration.proto
    %{read-lines:../../google_include}/google/protobuf/empty.proto
    %{read-lines:../../google_include}/google/protobuf/field_mask.proto
    %{read-lines:../../google_include}/google/protobuf/source_context.proto
    %{read-lines:../../google_include}/google/protobuf/struct.proto
    %{read-lines:../../google_include}/google/protobuf/timestamp.proto
    %{read-lines:../../google_include}/google/protobuf/type.proto
    %{read-lines:../../google_include}/google/protobuf/wrappers.proto
)))
